--- a/pyproject.toml.jinja
+++ b/pyproject.toml.jinja
@@ -18,7 +18,7 @@ requires = ["pdm-backend"]
 build-backend = "pdm.backend"
 
 [project.entry-points."peakrdl.exporters"]
-{{project_name}} = "{{project_name}}.__peakrdl__:Exporter"
+{{function_name}} = "{{project_name}}.__peakrdl__:Exporter"
 
 [tool.pdm]
 distribution = true
